these new optional arguments.

---
*** 'project-current' has a new optional argument, MAYBE-PROMPT.
If 'project-current' is called with this argument non-nil, then it is
passed to the 'project-prompter' to use as a prompt string.
Callers can use this to indicate the reason for which or context in
which Emacs should ask the user to select a project.

---
*** New command 'project-find-matching-file'.
It can be used when switching between projects with similar file trees
(such as Git worktrees of the same repository).  It supports being
invoked standalone or from the 'project-switch-commands' dispatch menu.

+++
*** New user option 'project-list-exclude'.
This user option describes projects that should always be skipped by
'project-remember-project'.

---
*** New user option 'project-prune-zombie-projects'.
This user option controls the automatic deletion of projects from
'project-list-file' that cannot be accessed when prompting for a
project.

The value can be a predicate which takes one argument and should return
non-nil if the project should be removed.  If set to nil, all the
inaccessible projects will not be removed automatically.

By default this is set to 'project-prune-zombies-default' function
which removes all non-remote projects.

---
*** New command 'project-save-some-buffers' bound to 'C-x p C-x s'.
This is like 'C-x s', but only for this project's buffers.

*** 'project-remember-project' can now be called interactively.

---
*** 'project-shell' and 'project-eshell' support numeric prefix buffer naming.
They now accept numeric prefix arguments to select or create numbered
shell sessions.  For example, 'C-2 C-x p s' switches to or creates a
buffer named "*name-of-project-shell<2>*".  By comparison, a plain
universal argument as in 'C-u C-x p s' always creates a new session.

** Registers

*** New functions 'buffer-to-register' and 'file-to-register'.
These allow users to interactively store file and buffers in registers.