@@ -467,10 +467,15 @@ Callers can use this to indicate the reason for which or context in
 which Emacs should ask the user to select a project.
 
 ---
-*** New command 'project-find-matching-file'.
+*** New command 'project-find-matching-buffer'.
 It can be used when switching between projects with similar file trees
 (such as Git worktrees of the same repository).  It supports being
 invoked standalone or from the 'project-switch-commands' dispatch menu.
+
+---
+*** New variable 'project-find-matching-buffer-function'.
+Major modes can set this to major mode-specific functions to control how
+'project-find-matching-buffer' finds matching buffers.
 
 +++
 *** New user option 'project-list-exclude'.
